<resources>
    <string name="app_name">Audiometr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ustawienia</string>
    <string name="txtInvitation">Zbadaj swój słuch!</string>
    <string name="txtCalibration">Kalibracja</string>
    <string name="txtUseOfCalibrationQ">Po co kalibrować?</string>
    <string name="txtTest">Test</string>
    <string name="txtAboutAudioTestQ">Jak wykonać badanie?</string>

    <string name="title_activity_main2">Kalibracja</string>
    <string name="title_activity_main3">Wykonaj badanie</string>
    <string name="calText1">1. Udaj się w ciche miejsce</string>
    <string name="calText2">2. Podłącz słuchawki \n (nie zakładaj ich!)</string>
    <string name="calText3">3. Przyłóż jedną słuchawkę do mikrofonu urządzenia (jeśli słuchawki mają własny mikrofon, to przyłóż do niego)</string>
    <string name="calText4">4. Naciśnij przycisk \"Kalibruj\"</string>
    <string name="calText5">5. Poczekaj, aż zakończy się kalibracja</string>
    <string name="calText0">Wykonaj kalibrację, \n by zwiększyć dokładność badania:</string>
    <string name="txtAboutAudioTest">Badanie polega na określeniu progu słyszenia, czyli na znalezieniu najmniejszego natężenia słyszalnego sygnału o danej częstotliwości.</string>
    <string name="txtUseOfCalibration">Kalibracja pozwala ustalić maksymalną głośność urządzenia w celu wykonania jak najbardziej miarodajnego badania audiometrią tonalną. Ze względu na zróżnicowanie parametrów urządzeń niemożliwe jest ominięcie tego procesu.</string>
    <string name="txtAudiometry">W profesjonalnej audiometrii tonalnej badanie polega na pomiarze słuchu w przewodnictwie powietrznym i kostnym. Generowane są tony sinusoidalne o różnych częstotliwościach. Wyniki są prezentowane w postaci krzywych – audiogramów, które przedstawiają progi słyszenia dla danych częstotliwości.</string>
    <string name="txtAbout">Aplikacja mobilna \"Audiometr\" pozwoli Ci w prosty i szybki sposób zbadać Twój słuch, \n bez wychodzenia z domu!</string>
    <string name="txtWarning">Uwaga! \n Niniejszy program nie ma na celu zastąpienia badania słuchu wykonanego profesjonalną aparaturą. Wartości poszczególnych parametrów mogą odbiegać od rzeczywistości, ze względu na różnice w wyposażeniu urządzeń mobilnych.
Celem aplikacji jest umożliwienie wyznaczenia orientacyjnego audiogramu, a wynik może nie odzwierciedlać stanu faktycznego. </string>
    <string name="begin">Zacznij badanie</string>
    <string name="audiometr">Audiometr</string>
    <string name="ok">OK</string>
    <string name="exit">Wróć</string>
    <string name="heard">Słyszę</string>
    <string name="result">Wynik badania</string>
    <string name="author">Autor: Tomasz Klimek</string>
    <string name="eMail">E-mail: toklimoko@gmail.com</string>
    <string name="version">Wersja: 122018_2</string>
    <string name="tv_audioTest_1">Aby rozpocząć badanie: </string>
    <string name="tv_audioTest_11">1. Udaj się w ciche miejsce</string>
    <string name="tv_audioTest_12">2. Załóż poprawnie słuchawki</string>
    <string name="tv_audioTest_13">3. Dotknij poniższy przycisk</string>
    <string name="tv_audioTest_14">Trwa badanie...</string>
    <string name="tv_audioTest_2">Za każdym razem, gdy usłyszysz ton dotknij \"Słyszę\"</string>
    <string name="tv_audioTest_3">\n \n Koniec badania</string>
    <string name="tv_calib3">O czym należy pamiętać?</string>
    <string name="tv_calib4">Podczas wykonywania kalibracji należy pamiętać, aby (tak jak całe badanie) odbyła się ona w zacisznym miejscu. Należy trzymać stałą odległość między słuchawką a mikrofonem i unikać stukania. W razie problemów kalibrację można przeprowadzać wielokrotnie.</string>
    <string name="tv_test1">Jak wykonać badanie?</string>
    <string name="tv_test2">Usiądź w cichym miejscu, załóż słuchawki na uszy. Kliknij przycisk \"Zacznij badanie\" i nasłuchuj kolejnych dźwięków. W chwili, gdy usłyszysz ton, dotknij przycisk \"Słyszę\". Badanie zakończy się automatycznie, po wygenerowaniu odpowiedniej ilości dźwięków.</string>
    <string name="tv_test31">Pamiętaj, aby przed badaniem wykonać kalibrację urządzenia! Podczas kalibracji nie zakładaj słuchawek! \n Badanie powinno się odbyć w zacisznym miejscu ze słuchawkami szczelnie przyłożonymi do uszu. Podczas badania nie można zmieniać głośności aplikacji. W razie problemów badanie można wielokrotnie powtarzać.</string>
    <string name="tv_test3">Badanie powinno się odbyć w zacisznym miejscu ze słuchawkami szczelnie przyłożonymi do uszu. Podczas badania nie można zmieniać głośności aplikacji. W razie problemów badanie można wielokrotnie powtarzać.</string>
    <string name="tv_test5">Uwaga</string>
    <string name="tv_choice_1">Wybierz typ badania:</string>
    <string name="go">Dalej</string>
    <string name="tv_basicTest">Badanie podstawowe</string>
    <string name="tv_extendedTest">Badanie rozszerzone</string>
    <string name="tv_basicTestTime">Czas trwania: około 5 min</string>
    <string name="tv_extendedTestTime">Czas trwania: około 15 min</string>
    <string name="calibrate">Kalibruj</string>
    <string name="save">Zapisz</string>
    <string name="dialogQuestion">Przed wykonaniem badania zaleca się kalibrację urządzenia!</string>
    <string name="skip">Pomiń</string>
    <string name="basic_test">Badanie podstawowe</string>
    <string name="extended_test">Badanie rozszerzone</string>
    <string name="basic_test1">Obejmuje test w podstawowym zakresie 7 częstotliwości: 125, 250, 500, 1000, 2000, 4000, 8000 Hz. Badanie trwa około 5 minut.</string>
    <string name="extended_test1">Obejmuje test w rozszerzonym zakresie 22 częstotliwości i pozwala na dokładniejszy wynik. Badanie trwa około 15 minut.</string>
    <string name="start">Start</string>
    <string name="app_info">Informacje o programie</string>
    <string name="close">Zamknij</string>
    <string name="sampleNumber">Próba: </string>


</resources>
